--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,8 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.BusSeatReserve">
         <activity
-            android:name=".BusRouteDisplay"
-            android:exported="false" />
+            android:name=".register_driver"
+            android:exported="true" />
+
         <activity
             android:name=".SEATT"
             android:exported="false" />
