show view added

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.BusSeatReserve">
         <activity
-            android:name=".leaveInfo"
+            android:name=".LeaveContent"
             android:exported="true" />
         <activity
             android:name=".forgotpassword"
