--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.busseatreserve">
+    package="com.example.xxx">
 
     <application
         android:allowBackup="true"
@@ -8,18 +8,32 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.BusSeatReserve">
+        android:theme="@style/Theme.Xxx">
+
+
         <activity
-            android:name=".bus_management"
+            android:name=".JDCtravels"
+            android:exported="false" />
+        <activity
+            android:name=".NCGtravels"
+            android:exported="false" />
+
+        <activity
+            android:name=".travel"
+            android:exported="false" />
+
+        <activity android:name=".AddActivity"
+            android:exported="false"/>
+
+        <activity android:name=".BusActivity"
             android:exported="false"
-            android:label="@string/title_activity_bus_management"
-            android:theme="@style/Theme.BusSeatReserve.NoActionBar" />
+            />
+
+
         <activity
-            android:name=".driverLogin"
-            android:exported="true" />
-        <activity
-            android:name=".MainActivity"
+            android:name=".adminpanel"
             android:exported="true">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
