--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,12 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation 'com.braintreepayments:card-form:3.1.1'
+
+     //test case
+    testImplementation "org.junit. jupiter: junit-jupiter-api:s.3.2"
+    testRuntimeOnly "org. junit. jupiter:junit-jupiter-engine:5.3.2"
+    testImplementation"org.junit.jupitertjunitjupiter-params:5.3.2"
+    testRuntimeOnly "org. junit.vintage:junit-vintage-engine:5.3.2"
 }
 apply plugin:'com.google.gms.google-services'
 apply plugin:'com.android.application'
